--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --color-bg-main: #08415c;
+  --color-bg-item: #ebbab9;
+  --color-bg-edit:#388697;
+
+
+  --color-green: #b5ffe1;
+  --color-red:#CC2936;
+}
 
 body {
   margin: 0;
