--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -36,6 +36,12 @@
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
+
+  /* для усечения переполненного текста с помощью многоточия */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
   input {
     padding: 10px;
     background: none;
