--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,4 +1,4 @@
-@use "../../index.css";
+@use '../../index.css';
 
 .app {
   width: 100%;
@@ -29,4 +29,26 @@ h1 {
   background-color: #388697;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
+  min-width: 400px;
+  min-height: 250px;
+}
+
+.resizeable {
+  position: relative;
+}
+
+.resizeableRight {
+  cursor: col-resize;
+  min-width: 10px;
+  min-height: 10px;
+  position: absolute;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100%;
+  right: 0;
+  top: 0;
+  width: 15px; 
 }
