--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -1,7 +1,7 @@
 @use "../../index.css";
 
 .todo {
-  padding: 15px;
+  padding: 5px 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   background-color: var(--color-bg-item);
@@ -13,6 +13,59 @@
   align-items: center;
   max-width: 100%;
   gap: 25px;
+}
+
+.label {
+  position: relative;
+}
+
+.checkbox {
+  position: relative;
+  top: rem(-6);
+
+  margin: 0 1rem 0 0;
+
+  cursor: pointer;
+
+  &:before {
+    transition: all 0.3s ease-in-out;
+    content: "";
+
+    position: absolute;
+    left: 0;
+    z-index: 1;
+
+    width: 1rem;
+    height: 1rem;
+
+    border: 2px solid #f2f2f2;
+  }
+
+  &:checked {
+    &:before {
+      transform: rotate(-45deg);
+      height: 0.5rem;
+
+      border-color: var(--color-bg-edit);
+      border-top-style: none;
+      border-right-style: none;
+    }
+  }
+
+  &:after {
+    content: "";
+
+    position: absolute;
+    top: rem(-2);
+    left: 0;
+
+    width: 1.1rem;
+    height: 1.1rem;
+
+    background: #fff;
+
+    cursor: pointer;
+  }
 }
 
 .select {
@@ -43,7 +96,6 @@
   white-space: nowrap;
 
   input {
-    padding: 10px;
     background: none;
     border: none;
   }
