--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,4 +1,4 @@
-@use '../../index.css';
+@use "../../index.css";
 
 .app {
   width: 100%;
@@ -31,6 +31,7 @@ h1 {
   border-radius: 8px;
   min-width: 400px;
   min-height: 250px;
+  gap: 25px;
 }
 
 .resizeable {
@@ -50,5 +51,14 @@ h1 {
   height: 100%;
   right: 0;
   top: 0;
-  width: 15px; 
+  width: 15px;
+}
+
+.search {
+  width: 100%;
+  padding: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  background-color: var(--color-bg-item);
+  list-style-type: none;
 }
